nuevos reportes enpdoints agregados
